[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/main/tile132.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/Cursors/Megabyte Games Mouse Cursor Pack/16x16/png dark/cursor-pointer-25-dark.png" type="Texture" id=3]
[ext_resource path="res://Player/Swordpos.gd" type="Script" id=4]
[ext_resource path="res://Areas/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player/SwordHitbox.gd" type="Script" id=6]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/ProgressBar/over.png" type="Texture" id=8]
[ext_resource path="res://assets/ProgressBar/Bottom.png" type="Texture" id=9]
[ext_resource path="res://assets/SoundEffects/damage2.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/Fire/Fire.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 6.5 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.0
height = 4.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 6.5 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 15, 20 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 11 )
region = Rect2( 15, 0, 15, 20 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 11 )
region = Rect2( 30, 0, 15, 20 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 11 )
region = Rect2( 45, 0, 15, 20 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Animate",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D" groups=["Player"]]
pause_mode = 2
collision_layer = 2
collision_mask = 13
script = ExtResource( 2 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0.0588235, 0.00784314, 0.00784314, 1 )
position = Vector2( 0, 0.5 )
shape = SubResource( 1 )

[node name="Swordpos" type="Position2D" parent="."]
script = ExtResource( 4 )

[node name="SwordArea" type="Area2D" parent="Swordpos" groups=["SwordHitbox"]]
position = Vector2( 10, 0 )
collision_layer = 2
collision_mask = 28
script = ExtResource( 6 )
damage = 5

[node name="Sword" type="Sprite" parent="Swordpos/SwordArea"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Swordpos/SwordArea" groups=["SwordHitbox"]]
shape = SubResource( 2 )
disabled = true

[node name="Timer" type="Timer" parent="Swordpos"]
wait_time = 0.1

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
collision_layer = 2
collision_mask = 17

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, 0.5 )
shape = SubResource( 3 )

[node name="Stats" parent="." instance=ExtResource( 7 )]
max_health = 20

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = -6.0
margin_top = -13.0
margin_right = 58.0
margin_bottom = 3.0
rect_scale = Vector2( 0.2, 0.2 )
max_value = 20.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 8 )

[node name="RegenTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="PotionLength" type="Timer" parent="."]
wait_time = 10.0

[node name="Damage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
bus = "Effects"

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.615686 )
position = Vector2( -1, -1 )
frames = SubResource( 8 )
animation = "Animate"

[connection signal="timeout" from="Swordpos/Timer" to="Swordpos" method="_on_Timer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_Hitbox_area_exited"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="RegenTimer" to="." method="_on_RegenTimer_timeout"]
[connection signal="timeout" from="PotionLength" to="." method="_on_PotionLength_timeout"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]

[editable path="Hitbox"]
